Added second collection and CRUD OPERATIONS
