# routes/orders.js
@@ -7,4 +7,10 @@ router.get('/', ordersController.getAllOrders);
 
 router.get('/:id', ordersController.getSingleOrder);
 
+router.post('/', ordersController.createOrder);
+
+router.put('/:id', ordersController.updateOrder);
+
+router.delete('/:id', ordersController.deleteOrder);
+
 module.exports = router;
